<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/done" />

        <Button
            android:id="@+id/retake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/retake" />

        <TextView
            android:id="@+id/numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/filtersPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/colorGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/color"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_filter_color"
                android:contentDescription="@string/color" />

            <TextView
                android:id="@+id/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grayscaleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/grayscale"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_filter_grayscale"
                android:contentDescription="@string/grayscale" />

            <TextView
                android:id="@+id/grayscaleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/grayscale" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/blackWhiteGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/blackWhite"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_filter_blackwhite"
                android:contentDescription="@string/black_and_white" />

            <TextView
                android:id="@+id/blackWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:text="@string/black_and_white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/photoGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/photo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_filter_photo"
                android:contentDescription="@string/photo" />

            <TextView
                android:id="@+id/photoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/photo" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/crop"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_crop_tool"
            android:contentDescription="@string/crop" />

        <ImageButton
            android:id="@+id/filters"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_filter_preview"
            android:contentDescription="@string/filters" />

        <ImageButton
            android:id="@+id/rotate"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_rotate_right"
            android:contentDescription="@string/rotate" />

        <ImageButton
            android:id="@+id/erase"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_remove"
            android:contentDescription="@string/erase" />

    </LinearLayout>

</LinearLayout>